--- a/src/pages/PlayerPage/PlayerPage.module.css
+++ b/src/pages/PlayerPage/PlayerPage.module.css
@@ -82,9 +82,9 @@
 
 @media (max-width: 900px) {
   .bigShinyWrapper span > div {
-    transform: scale(1.5);
+    transform: scale(1.1);
   }
   .bigShinyWrapper span > div:hover {
-    transform: scale(1.6);
+    transform: scale(1.2);
   }
 }
